Navbar and other edits

--- a/index.html
+++ b/index.html
@@ -5,35 +5,34 @@
   <link href = "bootstrap-4.3.1-dist/css/bootstrap.css" rel = stylesheet type = text/css>
   <link href = "index.css" rel = stylesheet type = text/css>
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  <title>Anirudh Nagasamudra's Website</title>
+  <link href="https://fonts.googleapis.com/css?family=Quattrocento+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body class="grad">
-<!--
-  <nav class="nav nav-pills nav-fill navbar text-white">
-      <a class="nav-item nav-link grow" href="index.html">Home</a>
-      <a class="nav-item nav-link grow" href="#about">About Me</a>
-      <a class="nav-item nav-link grow" href="#resume">Resume</a>
-      <a class="nav-item nav-link grow" href="#projects">Projects</a>
-      <a class="nav-item nav-link grow" href="#contact">Contact Me</a>
--->
+
+  <nav class="nav nav-pills nav-fill navbar sticky-top text-white bg-dark">
+      <a class="nav-item nav-link grow" href="index.html#home">Home</a>
+      <a class="nav-item nav-link grow" href="index.html#about">About Me</a>
+      <a class="nav-item nav-link grow" href="index.html#resume">Resume</a>
+      <a class="nav-item nav-link grow" href="index.html#projects">Projects</a>
+      <a class="nav-item nav-link grow" href="index.html#contact">Contact Me</a>
   </nav>
-  <section class="jumbotron text-white text-center">
+  <section class="jumbotron text-white text-center" id = "home">
           <h1 class="main_text"></h1>
   </section>
-  <section class = "jumbotron text-white about">
+  <section class = "jumbotron text-white about" id = "about">
     <h3 data-aos="fade-right">About Me</h3>
-    <p>I am an aspiring developer who has experience in HTML & CSS, Javascript, Python, C++ and many more languages. Currently I am attempting to improve my Web Development skills as well as get get further into Machine Learning. I believe ML is our future, which is why I want to explore it. I attend Dublin High School and am part of many clubs in school. Some include Key Club, DECA, and many more. Outside of school I play tennis regularly. I attend competitions often and play on the school team. One day, I aspire to go to a high level University and major in Computer Science, and possibly double major in Buissness as well. It is a dream of mine to help make our world a better place, and I believe going into technology and computer science is a step in the right direction for me. Scroll down for the rest of my website and to learn more about me and some of the projects I have done. </p>
+    <h5>I am an aspiring developer who has experience in HTML & CSS, Javascript, Python, C++ and many more languages. Currently I am attempting to improve my Web Development skills as well as get get further into Machine Learning. I believe ML is our future, which is why I want to explore it. I attend Dublin High School and am part of many clubs in school. Some include Key Club, DECA, and many more. Outside of school I play tennis regularly. I attend competitions often and play on the school team. One day, I aspire to go to a high level University and major in Computer Science, and possibly double major in Buissness as well. It is a dream of mine to help make our world a better place, and I believe going into technology and computer science is a step in the right direction for me. Scroll down for the rest of my website and to learn more about me and some of the projects I have done. </h5>
   </section>
-  <section class = "jumbotron text-white resume">
+  <section class = "jumbotron text-white" id = "resume">
     <h3 data-aos = "fade-right">Resume</h3>
     <h4>Click here to view my resume</h4>
   </section>
-  <section class = "jumbotron text-white projects">
+  <section class = "jumbotron text-white" id = "projects">
     <h3 data-aos="fade-right">Projects</h3>
     <h5>I have done many advanced python projects, which include Image Manipulation and things in that nature. I have also built two functional websites and am experienced in Web Development. Look at my Github to view these projects.</h5>
   </section>
-  <section class = "jumbotron text-white contact">
+  <section class = "jumbotron text-white contact" id = "contact">
     <h3 data-aos="fade-right">Contact Me</h3>
     <h5>Email me</h5>
     <h5>Follow and message me on Instagram, Twitter, and Facebook </h5>
